--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "require": {
     "php": ">= 7.2",
-    "nipwaayoni/elastic-apm-php-agent": "dev-7.1-dev",
+    "nipwaayoni/elastic-apm-php-agent": "dev-implement-agentbuilder as dev-7.1-dev",
     "ramsey/uuid": ">= 3.0 < 5.0"
   },
   "require-dev": {
