--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,16 @@
   "description": "A package to integrate Elastic APM into Laravel",
   "license": "MIT",
   "require": {
-    "php": ">= 7.2",
-    "illuminate/database": ">= 6.0 < 8",
-    "illuminate/http": ">= 6.0 < 8",
-    "illuminate/routing": ">= 6.0 < 8",
-    "illuminate/support": ">= 6.0 < 8",
+    "php": ">= 7.1",
+    "illuminate/database": "^5.5|^6|^7",
+    "illuminate/http": "^5.5|^6|^7",
+    "illuminate/routing": "^5.5|^6|^7",
+    "illuminate/support": "^5.5|^6|^7",
     "nipwaayoni/elastic-apm-php-agent": "7.1.0-rc1",
     "ramsey/uuid": ">= 3.0 < 5.0"
   },
   "require-dev": {
-    "orchestra/testbench": "^5.2"
+    "orchestra/testbench": "^v3.8"
   },
   "autoload": {
     "psr-4": {
